tests/sksl/errors/ReservedNameHvec3.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'hvec3'
1 error
